# serde_var_export

./: .gitignore  Cargo.toml  README.md  test-coverage.sh
.github/workflows/: ci.yml
examples/: simple.rs
src/: error.rs  lib.rs  ser.rs
tests/: common.rs  to_string.rs
